--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RecipesDBConnection": "server=localhost;port=3306;database=RecipesExample;user=root;password=10434900"
+  }
 }
 
